[B][COLOR gold]v2.2.5[/COLOR][/B]
- Migration to the new AllDebrid API
- More accuracy for movie trailers

[B][COLOR gold]v2.2.4[/COLOR][/B]
- Various under the hood changes

[B][COLOR gold]v2.2.3[/COLOR][/B]
- Added option to enable trailer selection only on season/episode level (default)
- Added option to remove CAM/SCR results
- Sources filters/sorting options tweaks - please re-set your preferences

[B][COLOR gold]v2.2.1[/COLOR][/B]
- Added Trailer selection feature (enable in settings)

[B][COLOR gold]v2.1.12[/COLOR][/B]
- Fixed bad link skipping
- Fixed some issues with Trakt progress list

[B][COLOR gold]v2.1.11[/COLOR][/B]
- Misc. code updates

[B][COLOR gold]v2.1.10[/COLOR][/B]
- Trailers:
    - YouTube add-on now supports playback via external apps/add-ons even without
       user API key, so we drop that requirement
    - Added support for seasons/episodes specific trailers
- Added uptobox/uptostream to captcha hosts, as they require a free account and pairing now
- Exclude special episodes from Trakt progress list, regardless of setting

[B][COLOR gold]v2.1.9[/COLOR][/B]
- Added fields for Opensubtitles.org log-in credentials on settings
    [I]It seems that Opensubtitles stopped supporting anonymous downloads
    through their API, so you now need to enter your log-in credentials
    for the subtitles downloading function to work[/I]
- Minor code update for source list directory

[B][COLOR gold]v2.1.8[/COLOR][/B]
- Some more debrid cache check fixes

[B][COLOR gold]v2.1.7[/COLOR][/B]
- Added Premiumize to supported providers for debrid cache check

[B][COLOR gold]v2.1.6[/COLOR][/B]
- Debrid-check code alterations

[B][COLOR gold]v2.1.5[/COLOR][/B]
- Added AllDebrid torrents cache check support

[B][COLOR gold]v2.1.4[/COLOR][/B]
- Playback: bookmark, resume, scrobble, subs notification improvements

[B][COLOR gold]v2.1.2[/COLOR][/B]
- Added notification upon subtitles download (optional)
- Debrid cache check dialog fixes
